11-triggers/6-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener-interceptor
  name: el-github-listener-interceptor
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-github-listener-interceptor
    weight: 100
  wildcardPolicy: None
status:
